--- a/deploy-archipelago-glocal/addOn/frontend/index.html
+++ b/deploy-archipelago-glocal/addOn/frontend/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.png" />
     <link rel="icon" href="/logo192.png" sizes="192x192">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="theme-color" content="#778745" />
+    <meta name="theme-color" content="#005259" />
 
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
@@ -17,12 +17,21 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
     <link rel="stylesheet" href="https://unpkg.com/react-mde@11.5.0/lib/styles/css/react-mde-all.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.7.2/main.min.css" />
-    <link href="https://db.onlinewebfonts.com/c/c56b59f1ca0720bc519b44798dbe5a3a?family=DK+Burobu" rel="stylesheet">
 
-    <title>Transiscope en Pays Nantais</title>
+    <style>
+      @font-face{
+        font-family: "DK Burobu";
+        src: url("/fonts/dkburobu.woff") format("woff");
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+      }
+    </style>
+
+    <title>Glocal Low-tech</title>
     <meta
       name="description"
-      content="Cartographie des acteurs du projet Glocal-low-tech"
+      content="Cartographie des acteurs de la low-tech"
     />
   </head>
   <body>
